@@ -1,5 +1,7 @@
 Version 5.2.0 (Not save-compatible)
 
+* Fixed the LunaLib soft dependency
+    - This means this mod no longer requires either LunaLib or Java 8 to run
 * Removed "fleetDoctrine" and "shipSize" options for Adversary's Dynamic Doctrine
   - This is done as these options are barely used by default and can conflict with mods that dynamically increase NPC faction strength
 * Made officers in a certain Silly bounty count as sleeper officers
